# firebase-haskell-client

./: LICENSE  README.md  firebase-haskell-client.cabal
.stack-work/install/f97f2598/flag-cache/: RSA-2.2.0-a900c3b0ddf3d49489dcef9bca2d70d0  SHA-1.6.4.2-31797059a7772ac568edb72434a64128  StateVar-1.1.0.3-8283c9355d2fc1ad397281acceca5467  adjunctions-4.3-acafd333bb779a5ff2fbc6e5b91b881c  aeson-0.9.0.1-f889b4345eea160d10a451c94cb8f135  asn1-encoding-0.9.3-71b30ceb00d477111a672b8ac455d265  asn1-parse-0.9.4-fba62c6fe46e06927eaa9bc51cba2556  asn1-types-0.3.2-1ec2a5f914a6bc01768e7392627196ff  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.1-6f56c7101cb835306161ed30cc683973  authenticate-oauth-1.5.1.1-da6883b96e3592f1e546d1d3d2eb5f30  base-orphans-0.5.1-7b27175c551c4fcc73095b85469e9188  base16-bytestring-0.1.1.6-b1d27017d2d4153c872efcf6a1e61e9a  base64-bytestring-1.0.0.1-bf3751bacf36b64d2bf9c173bd454a6e  bifunctors-5.2-bf0f101fe25e241d0e3d26b67540ece8  blaze-builder-0.4.0.1-d0fcc5b96161549193c9bc01fde84567  byteable-0.1.1-86f7950c2cc69f9e7107760c44236274  case-insensitive-1.2.0.5-6669cd7a393ccedc4f66c0a01b6f0e2f  cereal-0.5.1.0-02f2d0d2303d7820f489f4075cd2a51c  comonad-4.2.7.2-e59dbc82c70f7b009e45507deec5094c  connection-0.2.5-31ab011e50a2b44b925a092f3f6437d8  contravariant-1.4-5223dc3e822b5f33bb5165cb556b0c21  cookie-0.4.1.6-2a581b2c60eb678b5056a6b6c90c6ca1  crypto-api-0.13.2-88f1541b7dd0789594a3908c61132786  crypto-pubkey-types-0.4.3-d0fb3c7e2eeee7240129979e15694b6c  cryptohash-0.11.6-cca21545911c6fd025d586b25c51688a  cryptonite-0.10-1ac74041a3cdeb63f111b452d5859817  data-default-0.5.3-a34fab0e414a3e31b9dccb1774520fca  data-default-class-0.0.1-fcbab95490d730dd2489b628499587cd  data-default-instances-base-0.0.1-efbf37e938ab7ef8bb8b5066f40b3866  data-default-instances-containers-0.0.1-411ffd57222960c54fef4b07d7805817  data-default-instances-dlist-0.0.1-b4c8e8d836712f8fba826231c03f12f4  data-default-instances-old-locale-0.0.1-11796fe51f868bb456c3e6d409bfcc3f  distributive-0.5.0.2-32aa49a398be68a57e47c4aa9bde804e  dlist-0.7.1.2-c146db7a3515ed6ba1b2586af3ad474d  entropy-0.3.7-c00a424a4c657e8dc35d20f49e59356c  exceptions-0.8.2.1-9ba98441723ba3dfb2483e270e6043f5  firebase-haskell-client-0.1.0.0-7316f9368026d52c1a747cd7320822e6  firebase-haskell-client-0.1.0.0-78f899d8d3b17ef160ae8158309844c8  free-4.12.4-db66fe431aa83802a0e8941c1fc80bc0  (+37 more)
.stack-work/install/f97f2598/lib/x86_64-windows-ghc-7.10.3/firebase-haskell-client-0.1.0.0-0mR8cHFJKLkCnq2t5f085P/: Lib.hi
.stack-work/install/f97f2598/pkgdb/: firebase-haskell-client-0.1.0.0-7316f9368026d52c1a747cd7320822e6.conf  package.cache
src/: FireLogic.hs  Http.hs  TokenGenerator.hs  Types.hs  UriBuilder.hs
test/: Auth.hs  IntegrationTests.hs  Spec.hs  UnitTests.hs
