name:                firebase-haskell-client
version:             0.1.0.0
synopsis:            A client for the firebase backend cloud service
description:         Please see README.md
homepage:            http://github.com/githubuser/firebase-haskell-client#readme
license:             BSD3
license-file:        LICENSE
author:              Giovanni Ornaghi, Roland Brand
maintainer:          somebody@not-yet-defined.com
copyright:           2016 Giovanni Ornaghi, Roland Brand
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Http, Types, FireLogic, UriBuilder, TokenGenerator
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , lens-aeson
                     , aeson
                     , bytestring
                     , text
                     , http-types
                     , jose
                     , time
  default-language:    Haskell2010

test-suite firebase-haskell-client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       IntegrationTests
                     , UnitTests
  build-depends:       base
                     , firebase-haskell-client
                     , hspec
                     , QuickCheck
                     , bytestring
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/firebase-haskell-client
